--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 body {
-  blackground-color:#25edf7
+    font-size: 1rem;
+    font-family: 'Montserrat';
 }
-  
+
+header {
+    background-color: #ffffff;
+}
+
+
+section {
+    padding-bottom: 5rem;
+}
